<resources>
    <string name="app_name">Tennis Women’s League</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tennis_women_s_league">Tennis Women’s League</string>
    <string name="match">Match</string>
    <string name="news">News</string>
    <string name="notes">Notes</string>
    <string name="game">Game</string>
    <string name="history">History</string>
    <string name="metrics">Metrics</string>
    <string name="wta_singles_rankings">WTA Singles Rankings</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="plays">Plays</string>
    <string name="coach">Coach</string>
    <string name="matches_played_2022">Matches played 2022</string>
    <string name="aces_2022">Aces 2022</string>
    <string name="service_games_won_2022">Service Games Won 2022</string>
    <string name="return_games_won_2022">Return Games Won 2022</string>
    <string name="_1st_serve_won_2022">1st Serve Won 2022</string>
    <string name="enter_title">Enter title...</string>
    <string name="enter_your_note">Enter your note...</string>
    <string name="interactive">Interactive</string>
    <string name="play_and_gain_scores_n_to_make_more_bets">Play and gain scores\n to make more bets!</string>
    <string name="play_now">Play now!</string>
    <string name="mini_game">Mini Game</string>
    <string name="start_game">Start game</string>
    <string name="win">Congratulations, you guessed it!</string>
    <string name="no_win">Unfortunately, you did not guess.</string>
    <string name="info_game">Here you can play a mini-game</string>
    <string name="info_interactive">Click Play now to start the game</string>
    <string name="info_match">Here you can get acquainted with the past matches</string>
    <string name="info_news">Here you can read the latest news</string>
    <string name="info_history">Check out the history of the match</string>
    <string name="info_notes">Here you can keep your notes</string>
    <string name="check">Check</string>
    <string name="statistics">statistics</string>
</resources>