<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:paddingStart="37dp"
    android:paddingEnd="37dp"
    tools:context=".presentation.InteractiveFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_interactive"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/interactive"
            android:textColor="@color/color_accent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_back_menu" />

        <ImageView
            android:id="@+id/iv_back_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_info_interactive"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="370dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/game_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_and_gain_scores_n_to_make_more_bets"
        android:textColor="@color/color_accent"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/play_now"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintVertical_bias="0.4"
        android:background="@drawable/bg_item_match_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_now"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="24sp"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>